--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "*.s": "gas",
         "a.out.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
